# aos-statshammer-rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
aos-statshammer/: Cargo.toml
aos-statshammer-cli/: Cargo.toml
aos-statshammer-cli/examples/targets/: ethereal_with_rerolls.toml  simple.toml
aos-statshammer-cli/examples/weapons/: bonuses_and_rerolls.toml  everything.toml  simple.toml
aos-statshammer-cli/src/: main.rs  rerolls.rs  serde_utils.rs  target_config.rs  weapon_config.rs
aos-statshammer-core/: Cargo.toml
aos-statshammer-core/benches/: all.rs  average.rs  benchmark_average.rs  benchmark_weapon.rs
aos-statshammer-core/src/: abilities.rs  characteristic.rs  characteristics.rs  dice.rs  lib.rs  opponent.rs  processors.rs  rollable.rs  target.rs  testutils.rs  weapon.rs
aos-statshammer-core/src/abilities/: characteristic.rs  common.rs  opponent.rs  weapon.rs
aos-statshammer-core/src/processors/: average.rs  max.rs  results.rs  roll_target.rs  simulation.rs
aos-statshammer-core/src/processors/average/: roll.rs
aos-statshammer-core/src/rollable/: dice.rs  dice_notation.rs
aos-statshammer-core/tests/: average_damage_test.rs  data.rs  max_damage_test.rs
aos-statshammer/benches/: all.rs  benchmark_average.rs
aos-statshammer/src/: abilities.rs  compare.rs  lib.rs  results.rs  unit.rs
aos-statshammer/src/abilities/: definitions.rs  fields.rs  opponent.rs  weapon.rs
aos-statshammer/src/results/: average.rs  simulation.rs
aos-statshammer/tests/: compare_average_test.rs  compare_simulation_test.rs  data.rs
scripts/: pre-commit.sh
statshammer-api/: Cargo.toml
statshammer-api/src/: abilities.rs  comparisons.rs  errors.rs  extract.rs  main.rs  units.rs
statshammer-api/src/extract/: json.rs  query.rs
