[package]
name = "aos-statshammer-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
aos-statshammer-core = { path = "../aos-statshammer-core" }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
simple_logger = "5.0"