[package]
name = "aos-statshammer-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "~0.8.5"
regex = "~1.6.0"
lazy_static = "~1.4.0"
itertools = "~0.10.3"
num-traits = "~0.2.15"
serde = { version = "~1.0.144", features = ["derive"], optional = true }
serde_json = { version = "~1.0.85", optional = true }

[features]
serde = ["dep:serde", "dep:serde_json"]


[dev-dependencies]
test-case = "~2.2.1"
criterion = "~0.3.6"
float_eq = "~1.0.0"

[[bench]]
name = "all"
path = "benches/all.rs"
harness = false
