[package]
name = "aos-statshammer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aos-statshammer-core = { path = "../aos-statshammer-core" }
serde = { version = "*", features = ["derive"] }
itertools = "*"

[features]
serde = ["aos-statshammer-core/serde"]

[dev-dependencies]
float_eq = "~1.0.0"
test-case = "~2.2.1"
criterion = "~0.3.6"

[[bench]]
name = "all"
path = "benches/all.rs"
harness = false
