[package]
name = "statshammer-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aos-statshammer = { path = "../aos-statshammer", features = ["serde"] }
axum = "*"
tracing-subscriber = "*"
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tower = "*"
tower-http = { version = "*", features = [
    "trace",
    "compression-gzip",
    "catch-panic",
] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
